<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.figtreelake</groupId>
	<artifactId>libraries</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>libraries</name>
	<description>A handful of personal libraries which helps on project development.</description>
	<url>https://github.com/MarceloLeite2064/libraries</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Marcelo Leite</name>
			<email>marceloleite2604@gmail.com</email>
			<organization>FigTreeLake</organization>
			<organizationUrl>https://github.com/MarceloLeite2064/libraries</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/MarceloLeite2604/libraries.git</connection>
		<developerConnection>scm:git:ssh://github.com:MarceloLeite2604/libraries.git</developerConnection>
		<url>http://github.com/simpligility/ossrh-demo/tree/master</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jvm.options>--add-opens java.base/*=ALL-UNNAMED</jvm.options>
	</properties>

	<modules>
		<module>blimp</module>
		<module>flask</module>
		<module>sled</module>
		<module>util</module>
	</modules>

	<profiles>
		<profile>
			<id>java-9</id>
			<activation>
				<jdk>[1.9,)</jdk>
			</activation>
			<properties>
				<surefire.argLine>-noverify -Djdk.attach.allowAttachSelf=true
					--illegal-access=permit --add-opens
					java.base/jdk.internal.loader=ALL-UNNAMED</surefire.argLine>
			</properties>
		</profile>
		<profile>
			<id>java-8</id>
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<properties>
				<surefire.argLine>-noverify</surefire.argLine>
			</properties>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh-snapshot</id>
			<name>OSSRH Snapshot Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<name>OSSRH Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>[4,)</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.4</version>
				<configuration>
					<excludes>
						<exclude>**/*Exception.*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>4.3.0</version>
				<configuration>
					<repoToken>hZfLnP0OgkOyifKlrog1x9SNA3sMPbhDg</repoToken>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>javax.xml.bind</groupId>
						<artifactId>jaxb-api</artifactId>
						<version>2.3.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<skip>true</skip>
					<skipDeploy>true</skipDeploy>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-to-docs-directory</id>
						<phase>site-deploy</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/docs/apidocs/</outputDirectory>
							<resources>
								<resource>
									<directory>${javadoc.outputDirectory}</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<configLocation>google_checks.xml</configLocation>
					<encoding>UTF-8</encoding>
					<consoleOutput>true</consoleOutput>
					<failsOnError>true</failsOnError>
					<failOnViolation>true</failOnViolation>
					<violationSeverity>warning</violationSeverity>
					<linkXRef>false</linkXRef>
				</configuration>
				<executions>
					<execution>
						<id>checkstyle-validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<interactive>false</interactive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<additionalOptions>-html5</additionalOptions>
					<source>8</source>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
